tests/baselines/reference/typeofInObjectLiteralType.errors.txt
==== tests/cases/compiler/typeofInObjectLiteralType.ts (1 errors) ====
    var a: { b: number; c: typeof b }; // Should give error for attempting to use type query on b.
                                  ~
!!! typeofInObjectLiteralType.ts(1,31): error TS2095: Could not find symbol 'b'.